--- a/src/WinUi/MainWindow.xaml
+++ b/src/WinUi/MainWindow.xaml
@@ -4,10 +4,26 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:WinUi"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:pages="using:WinUi.Pages"
     mc:Ignorable="d">
 
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
+    <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="10">
+
+        <Button x:Name="addNewServerBtn" Click="addNewServerBtn_Click" Padding="10" HorizontalAlignment="Center">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="/Assets/add.scale-200.png" Height="20"/>
+                <TextBlock FontWeight="SemiBold" Text="New Redis Server"  VerticalAlignment="Stretch"/>
+            </StackPanel>
+        </Button>
+        <GridView x:Name="Servers" ItemsSource="{x:Bind RedisConnections, Mode=OneWay}">
+            <GridView.ItemTemplate>
+                <DataTemplate x:Name="IconTextTemplate" x:DataType="local:RedisConnection">
+                    <StackPanel Width="264" Height="48" Padding="12" Orientation="Horizontal" AutomationProperties.Name="{x:Bind Address}">
+                        <SymbolIcon Symbol="Folder" VerticalAlignment="Top"/>
+                        <TextBlock Margin="12,0,0,0" Width="204" Text="{x:Bind Address}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </GridView.ItemTemplate>
+        </GridView>
     </StackPanel>
 </Window>
