Disable inputs when checking connection

--- a/src/WinUi/Pages/AddRedisServerDialog.xaml
+++ b/src/WinUi/Pages/AddRedisServerDialog.xaml
@@ -8,18 +8,19 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Title="Add Redis Server"
-    PrimaryButtonText="{x:Bind DefaultPrimaryButtonText, Mode=OneTime}"
+    PrimaryButtonText="{x:Bind PrimaryButtonLabel}"
     CloseButtonText="Cancel"
+    IsSecondaryButtonEnabled="{x:Bind IsSecondaryButtonAvailable}"
     PrimaryButtonClick="ContentDialog_PrimaryButtonClick"
-    IsPrimaryButtonEnabled="{x:Bind IsFormValid}">
+    IsPrimaryButtonEnabled="{x:Bind IsPrimaryButtonAvailable}">
 
     <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0" Padding="0">
 
-        <TextBox x:Name="serverTxt" Header="Server"/>
-        <NumberBox x:Name="portTxt" Header="Port" SpinButtonPlacementMode="Hidden"/>
-        
-        <TextBox x:Name="usernameTxt" Header="Username"/>
-        <PasswordBox x:Name="passwordTxt" Header="Password" IsPasswordRevealButtonEnabled="True"/>
+        <TextBox IsEnabled="{x:Bind FormEditingEnabled}" x:Name="serverTxt" Header="Server"/>
+        <NumberBox IsEnabled="{x:Bind FormEditingEnabled}" x:Name="portTxt" Header="Port" SpinButtonPlacementMode="Hidden"/>
+
+        <TextBox IsEnabled="{x:Bind FormEditingEnabled}" x:Name="usernameTxt" Header="Username"/>
+        <PasswordBox IsEnabled="{x:Bind FormEditingEnabled}" x:Name="passwordTxt" Header="Password" IsPasswordRevealButtonEnabled="True"/>
 
         <TextBlock Foreground="Red" x:Name="errorTextBlock"/>
     </StackPanel>
