--- a/src/WinUi/Pages/ConnectedRedisServerPage.xaml
+++ b/src/WinUi/Pages/ConnectedRedisServerPage.xaml
@@ -3,12 +3,48 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:WinUi.Pages"
+    xmlns:global="using:WinUi"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:redis="using:WinUi.Redis"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-        <TextBlock Text="{x:Bind _navArgs.ConnectedServer.ServerEntry.Server.Name}" FontSize="100"></TextBlock>
-    </StackPanel>
+    <Grid>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <StackPanel 
+                Padding="10"
+                Grid.Row="0" CornerRadius="8,8,8,8"
+                        BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}" 
+                        BorderThickness="1" 
+                        Margin="10">
+                <Button Click="btnRefresh_Click" IsEnabled="{x:Bind _page.Page.ConnectedServer.IsNotBusy, Mode=OneWay}">
+                    <SymbolIcon Symbol="Refresh"></SymbolIcon>
+                </Button>
+            </StackPanel>
+            
+            <ListView Grid.Row="1" ItemsSource="{x:Bind _page.Page.ConnectedServer.VisibleKeys}">
+
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="global:RedisKey">
+                        <TextBlock Text="{x:Bind Key}"></TextBlock>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
+        </Grid>
+
+        <TextBlock Grid.Column="1" Text="{x:Bind _page.Page.ConnectedServer.ServerEntry.Server.Name}" FontSize="100"></TextBlock>
+    </Grid>
 </Page>
